# RS232-to-USB-Waagen-REST-API

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  sniffer.py
backend/src/waage/: __init__.py  api.py  app_api.py  cli.py  containers.py  count_templates.py  differenz.py  logger.py  messlog.py  models.py  parser.py  reader.py  samples.py  scale_api.py  simulator.py  state.py  tools.py
backend/tests/: test_api.py  test_app_api.py  test_app_containers_api.py  test_app_count_templates_api.py  test_containers.py  test_count_templates.py  test_differenz.py  test_logger.py  test_messlog.py  test_models.py  test_parser.py  test_reader.py  test_samples.py  test_scale_api.py  test_scale_source_api.py  test_simulator.py  test_tools.py  test_version_loader.py
backend/tests/fixtures/: sample_frames.txt
docs/: FUNCTIONS.md  HARDWARE.md  WAAGE_FORMAT.md
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
frontend/public/: version.json
frontend/src/: App.svelte  main.js  main.ts
frontend/src/components/: ActionButtons.svelte  ActionCard.svelte  CardGrid.svelte  ContactStrip.svelte  ContainerPicker.svelte  CountPanel.svelte  Dashboard.svelte  DraggableWindow.svelte  ExportDialog.svelte  (+29 more)
frontend/tests/: format.test.js  format.test.ts  helpRender.test.ts  historyTracker.test.ts  i18n.test.ts  search.test.ts  stableFormat.test.ts
mockups/: README.md  index.html
scripts/: bump.sh  setup.sh
(+43 files in other folders)
