[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waage"
dynamic = ["version"]
description = "Präzisionswaagen über RS232 (FTDI) auslesen — REST + WebSocket"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "pi" }]
dependencies = [
    "pyserial>=3.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
waage = "waage.cli:main"
waage-api = "waage.api:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
